[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://Scripts/UIManager.gd" id="1_0"]

[node name="UIManager" type="CanvasLayer"]
script = ExtResource("1_0")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="BossHealthContainer" type="VBoxContainer" parent="Control"]
layout_mode = 0
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_right = 200.0
offset_bottom = 80.0

[node name="BossHealthBG" type="ColorRect" parent="Control/BossHealthContainer"]
layout_mode = 2
custom_minimum_size = Vector2(400, 60)
color = Color(0.2, 0.2, 0.2, 0.8)

[node name="BossHealthLabel" type="Label" parent="Control/BossHealthContainer"]
layout_mode = 2
text = "Boss: 100 / 100"
horizontal_alignment = 1

[node name="BossHealthBar" type="ProgressBar" parent="Control/BossHealthContainer"]
layout_mode = 2
custom_minimum_size = Vector2(400, 30)
value = 100.0

[node name="PlayerHealthContainer" type="VBoxContainer" parent="Control"]
layout_mode = 0
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -100.0
offset_right = 420.0
offset_bottom = -20.0

[node name="PlayerHealthBG" type="ColorRect" parent="Control/PlayerHealthContainer"]
layout_mode = 2
custom_minimum_size = Vector2(400, 60)
color = Color(0.2, 0.2, 0.2, 0.8)

[node name="PlayerHealthLabel" type="Label" parent="Control/PlayerHealthContainer"]
layout_mode = 2
text = "Player: 100 / 100"
horizontal_alignment = 1

[node name="PlayerHealthBar" type="ProgressBar" parent="Control/PlayerHealthContainer"]
layout_mode = 2
custom_minimum_size = Vector2(400, 30)
value = 100.0

[node name="TestLabel" type="Label" parent="Control"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -12.0
offset_right = 50.0
offset_bottom = 12.0
text = "UI TEST"
horizontal_alignment = 1
